--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 		
 	</div>
 	
-	<script src="http://libs.baidu.com/jquery/1.10.2/jquery.min.js"></script>
+	<script src="js/jquery.js"></script>
 	
 	<script type="text/javascript" src="dist/swipeslider.min.js"></script>
 	<script type="text/javascript">
